--- a/index.html
+++ b/index.html
@@ -99,7 +99,11 @@
                 </div>
         </div>
         <div class="page2">
-
+            <div class="page2-right">
+                <p>Exclusive insights into <br>UI/UX and product design</p>
+                <h5>Being a design studio at the forefront of digital transformation and product design, we take it upon ourselves to drop some knowledge, share insights, let out insider tips, and put our work on full display</h5>
+            </div>
+            <div class="page2-left"></div>
         </div>
     </main>
 
