--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title>LAZAREV. - Digital Product Design Agency</title>
+    <link rel="icon" type="image/x-icon" href="output.png">
     <link rel="stylesheet" href="style.css">
     <link
     href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css"
@@ -103,7 +104,25 @@
                 <p>Exclusive insights into <br>UI/UX and product design</p>
                 <h5>Being a design studio at the forefront of digital transformation and product design, we take it upon ourselves to drop some knowledge, share insights, let out insider tips, and put our work on full display</h5>
             </div>
-            <div class="page2-left"></div>
+            <div class="page2-left">
+                <div class="left-elem">
+                    <h1>The Gestalt Principles of Design: How <br> Design Forms Visual Perception</h1>
+                    <img src="https://lh3.googleusercontent.com/cxQV2ThcrRGnJ6KqGCuSCDtcjujm3ovR3nlZPwT-hJoGa_J7TbPsdHUBE9K7LmmohE3G4iA=s170" alt="">
+                </div>
+                <div class="left-elem">
+                    <h1>Effective Design Principles for Crypto <br> Web Design</h1>
+                    <img src="https://lh3.googleusercontent.com/RHh8wPity2qZ56eqlhgeegruXhJabOywgYNG1lc7ZRqCHRPIfoVWBmETQHAECwCWO_Ew=s170" alt="">
+                </div>
+                <div class="left-elem">
+                    <h1>How to design an AI interface users <br> will trust in 2024?</h1>
+                    <img src="https://www.elpais.com.co/resizer/v2/6G5O5DP5EJD6DJVMW4VYIJKLJQ.jpg?auth=fb0e9c00583337830c70962d0b8dfdcf6ada62d1a17d73316416602f31c95cd7&smart=true&quality=75&width=1280&height=720" alt="">
+                </div>
+                <div class="left-elem">
+                    <h1>How AI Influences Design and the <br> Reciprocal Impact of UX on AI-Driven <br>Products</h1>
+                    <img src="https://lh3.googleusercontent.com/96u92UJ6URtXNYE09UeDQrfajgCcxR6s5LLn99Y-pf4h_wUm6naAk2ycsymxcBDbHiyF=s170" alt="">
+                </div>
+               
+            </div>
         </div>
     </main>
 
