--- a/index.html
+++ b/index.html
@@ -135,6 +135,20 @@
             </div>
         </div>
         <div class="page4"></div>
+
+
+
+
+
+
+
+
+        <footer style="bottom: 0; width: 100%; background-color: #333; color: white; text-align: center; padding: 10px 0;font-family: Arial, Helvetica, sans-serif;">
+            <p style="margin: 0;">Work in Progress</p>
+            <p style="margin: 0;">Visit the original site: 
+                <a href="https://www.lazarev.agency/" style="color: rgb(247, 175, 175); text-decoration: underline;">Lazarev.com</a>
+            </p>
+        </footer>
     </main>
 
     
