text para completed

--- a/index.html
+++ b/index.html
@@ -240,8 +240,13 @@
         </div>
       </div>
       <div class="page6">
-
+            <div class="text-contain">
+              <div class="first-text"><p>Featured digital <br> design projects</p>
+              <h1>Our portfolio encompasses a wide range of digital designs essential for the growth</h1></div>
+              <div class="second-text"><h1>of modern businesses. From B2B SaaS and B2C mobile apps to marketing design for promotions, we display our work created for early-stage startups and enterprises at various stages of their growth.</h1></div>
+            </div>
       </div>
+      <div class="page7"></div>
 
       <!-- <footer style="bottom: 0; width: 100%; background-color: #333; color: white; text-align: center; padding: 10px 0;font-family: Arial, Helvetica, sans-serif;">
             <p style="margin: 0;">Work in Progress</p>
