--- a/index.html
+++ b/index.html
@@ -78,8 +78,7 @@
                 fill="#fff"
                 d="M48 77.457v7.224h7.224l21.307-21.306-7.224-7.225L48 77.457Zm34.118-19.67a1.919 1.919 0 0 0 0-2.716l-4.508-4.508a1.919 1.919 0 0 0-2.716 0l-3.526 3.526 7.224 7.224 3.526-3.525Z"
                 data-original="M65.72 109.14c10.08 0 17.76-3.78 23.04-11.34 5.4-7.68 8.1-17.64 8.1-29.88 0-12.24-2.7-22.2-8.1-29.88-5.28-7.68-12.96-11.52-23.04-11.52-9.96 0-17.7 3.84-23.22 11.52-5.4 7.68-8.1 17.64-8.1 29.88 0 12.12 2.7 22.02 8.1 29.7 5.52 7.68 13.26 11.52 23.22 11.52Zm46.08 7.02c-11.64 12.6-27.06 18.9-46.26 18.9s-34.62-6.3-46.26-18.9C7.76 103.56 2 87.48 2 67.92c0-19.56 5.76-35.64 17.28-48.24C30.92 7.08 46.34.78 65.54.78s34.62 6.3 46.26 18.9c11.64 12.6 17.46 28.68 17.46 48.24 0 19.56-5.82 35.64-17.46 48.24Z"
-              ></path></svg></span
-          >duct
+              ></path></svg></span>duct
         </h1>
         <h1>design agency</h1>
         <p>
@@ -135,7 +134,7 @@
               Design Forms Visual Perception
             </h1>
             <img
-              src="https://lh3.googleusercontent.com/cxQV2ThcrRGnJ6KqGCuSCDtcjujm3ovR3nlZPwT-hJoGa_J7TbPsdHUBE9K7LmmohE3G4iA=s170"
+              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQT5eLVukzF5rwNwfa28VmfAU9JIAeXA-4FOg&s"
               alt=""
             />
           </div>
@@ -145,7 +144,7 @@
               Web Design
             </h1>
             <img
-              src="https://lh3.googleusercontent.com/RHh8wPity2qZ56eqlhgeegruXhJabOywgYNG1lc7ZRqCHRPIfoVWBmETQHAECwCWO_Ew=s170"
+              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQq-_UUE45dqQui7Wmi_Mdspt4pFCKdGDmLww&s"
               alt=""
             />
           </div>
@@ -165,14 +164,14 @@
               Reciprocal Impact of UX on AI-Driven <br />Products
             </h1>
             <img
-              src="https://lh3.googleusercontent.com/96u92UJ6URtXNYE09UeDQrfajgCcxR6s5LLn99Y-pf4h_wUm6naAk2ycsymxcBDbHiyF=s170"
+              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR1_Cxq7X8CP-Y_M6_aChAmoZiS45PCiQ-o8A&s"
               alt=""
             />
           </div>
         </div>
       </div>
       <div class="page3">
-        <video src="https://lazarev.kiev.ua/la24/la-reel--min.mp4"></video>
+        <video src="https://lazarev.kiev.ua/la24/la-reel--min.mp4" autoplay muted loop ></video>
         <div class="video-container">
           <div class="play-button">
             <i class="ri-play-fill"></i>
