unsupported images changes

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
               Design Forms Visual Perception
             </h1>
             <img
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQT5eLVukzF5rwNwfa28VmfAU9JIAeXA-4FOg&s"
+              src="https://www.google.com/imgres?q=Rocking%20Ai%20images&imgurl=https%3A%2F%2Fstatic.vecteezy.com%2Fsystem%2Fresources%2Fpreviews%2F036%2F217%2F801%2Flarge_2x%2Fai-generated-rocking-horse-toy-a-gift-of-childhood-joy-generated-by-ai-free-photo.jpg&imgrefurl=https%3A%2F%2Fwww.vecteezy.com%2Fphoto%2F36217801-ai-generated-rocking-horse-toy-a-gift-of-childhood-joy-generated-by-ai&docid=ccMFDKX39Mok8M&tbnid=fVLpU4nGJvk6PM&vet=12ahUKEwi0gZjnp52LAxXaSmwGHd8QGAkQM3oECHAQAA..i&w=3430&h=1960&hcb=2&ved=2ahUKEwi0gZjnp52LAxXaSmwGHd8QGAkQM3oECHAQAA"
               alt=""
             />
           </div>
@@ -144,7 +144,7 @@
               Web Design
             </h1>
             <img
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQq-_UUE45dqQui7Wmi_Mdspt4pFCKdGDmLww&s"
+              src="https://www.google.com/imgres?q=cute%20Ai%20images&imgurl=https%3A%2F%2Fimgcdn.stablediffusionweb.com%2F2024%2F9%2F20%2Fd95bf635-fec3-46b6-9364-917344abbe10.jpg&imgrefurl=https%3A%2F%2Fstablediffusionweb.com%2Fimage%2F17568756-cute-ai-robot&docid=OroxSHIOj9j3JM&tbnid=s-p7Q9YTo7C8CM&vet=12ahUKEwiu_cOnqJ2LAxXmRmwGHeGANegQM3oECHQQAA..i&w=1024&h=1024&hcb=2&ved=2ahUKEwiu_cOnqJ2LAxXmRmwGHeGANegQM3oECHQQAA"
               alt=""
             />
           </div>
@@ -164,7 +164,7 @@
               Reciprocal Impact of UX on AI-Driven <br />Products
             </h1>
             <img
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR1_Cxq7X8CP-Y_M6_aChAmoZiS45PCiQ-o8A&s"
+              src="https://www.google.com/imgres?q=cute%20Ai%20images&imgurl=https%3A%2F%2Fpng.pngtree.com%2Fthumb_back%2Ffh260%2Fbackground%2F20230626%2Fpngtree-animated-3d-illustration-of-a-cute-ai-robot-greeting-with-cartoon-image_3682359.jpg&imgrefurl=https%3A%2F%2Fpngtree.com%2Ffree-backgrounds-photos%2Fcute-robot&docid=CMa3mGUPGJLDwM&tbnid=jwRngULkDq2lzM&vet=12ahUKEwiu_cOnqJ2LAxXmRmwGHeGANegQM3oECFMQAA..i&w=640&h=359&hcb=2&ved=2ahUKEwiu_cOnqJ2LAxXmRmwGHeGANegQM3oECFMQAA"
               alt=""
             />
           </div>
